--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,19 +7,105 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
-
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+a {
+  display: flex;
+  flex-direction: column;
+}
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 24px;
+  list-style: none;
+}
+.gallery-image {
+  width: 360px;
+  height: 200px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition-property: transform;
+  transition-duration: 500ms;
+  transition-timing-function: linear;
+}
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 24px 0px 0px 0px;
+  border-radius: 8px 0px 0px 0px;
+  background: #ffffff;
+}
+label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #2e2f42;
+}
+.email-form {
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+textarea.message-form {
+  width: 360px;
+  height: 80px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  resize: none;
+}
+.message-form:focus,
+.message-form:hover,
+.frame-form:focus,
+.frame-form:hover {
+  border: 1px solid #000000;
+  outline: none;
+}
+.form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px, 16px, 8px, 16px;
+  width: 95px;
+  height: 40px;
+  border-radius: 8px;
+  background: #4e75ff;
+  color: #ffffff;
+  border: none;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+}
+.form-button:hover,
+.form-button:focus {
+  cursor: pointer;
+  background: #6c8cff;
 }
